fix(ui): clean up IconsNumber grid layout and remove group header bonds
Use CSS grid for IconsNumber alignment (number right-aligned, icons left).
Remove bond totals from validator group headers (imperator/jedi/padawan/heroes)
to avoid misalignment between header and table cell contexts.

--- a/src/components/IconsNumber/IconsNumber.module.scss
+++ b/src/components/IconsNumber/IconsNumber.module.scss
@@ -1,13 +1,18 @@
 .wrapper {
-  display: flex;
+  display: grid;
+  grid-template-columns: 50px 1fr;
   align-items: center;
+  gap: 2px;
   white-space: nowrap;
+}
+
+.number {
+  text-align: right;
 }
 
 .icon {
   display: flex;
   flex-direction: row;
-  margin-left: 3px;
 
   .vertical {
     flex-direction: column;
