--- a/src/pages/Sphere/pages/containers/Heroes/components/ValidatorTable/ui/TransitionContainer/TransitionContainer.module.scss
+++ b/src/pages/Sphere/pages/containers/Heroes/components/ValidatorTable/ui/TransitionContainer/TransitionContainer.module.scss
@@ -39,6 +39,10 @@
   gap: 10px;
   width: 100%;
   font-size: 16px;
+
+  .titleOptions {
+    flex-shrink: 0;
+  }
 }
 
 .btnOpenIcon {
